# ChineseChess

./: .gitignore  Cargo.toml  README.md
crates/board_engine/: Cargo.toml
crates/board_engine/src/: grid.rs  lib.rs  position.rs  vec2d.rs
crates/game_app/: Cargo.toml
crates/game_app/src/: launcher.rs  main.rs
crates/game_app/src/ui/: common.rs  gui.rs  mod.rs  tui.rs
crates/game_view/: Cargo.toml
crates/game_view/src/: adapter.rs  dto.rs  lib.rs
crates/gomoku/: Cargo.toml
crates/gomoku/src/: adapter.rs  ai.rs  board.rs  game.rs  lib.rs  wasm_api.rs  win.rs
crates/xiangqi/: Cargo.toml
crates/xiangqi/src/: adapter.rs  ai.rs  board.rs  chess.rs  game.rs  lib.rs  moves.rs  rules.rs  wasm_api.rs
crates/xiangqi/src/chess/: cannon.rs  car.rs  elephant.rs  horse.rs  king.rs  pawn.rs  servant.rs
src/: board.rs  chess.rs  game.rs  lib.rs  main.rs  position.rs  vec2d.rs  view_adapter.rs  wasm_api.rs
src/chess/: cannon.rs  car.rs  elephant.rs  horse.rs  king.rs  pawn.rs  servant.rs
src/ui/: gui.rs  tui.rs
web/: README.md  app.js  index.html  style.css
web/gomoku/: README.md  app.js  index.html  style.css
web/xiangqi/: README.md  app.js  index.html  style.css
